#9 Arranged footer and added player name on separate subnav

--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -2,7 +2,7 @@
 <!-- Main Pane -->
 <div class="main">
 	<div class="page-sub-nav">
-	  <h4>Team Contribution: All<h4>  	
+	  <h4>Team Contribution: All Rounds<h4>  	
 	</div>
 	<div class="col-md-8">
 	  <!-- MINUTES -->
