--- a/app/views/shared/_rt_sidebar.html.erb
+++ b/app/views/shared/_rt_sidebar.html.erb
@@ -16,7 +16,7 @@
 	
 	<table class="table table-bordered table-hover">
 		<thead>
-			<th>Teammates</th>
+			<th>Teammates <i class="fa fa-cogs"></i></th>
 			
 		</thead>
 		<% @po_team_rosters_array.each do |hash| %>
