--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -28,25 +28,51 @@ text-align: center;
 	margin-top: 0px;
 }
 
+h1, h2, {
+  font-family: 'Dosis', sans-serif;
+}
+
+h3, h4, h5 {
+  font-family: 'Glegoo', serif;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 .full-header {
 	width: 100%;
 	//position:fixed; 
-	z-index: 1;
+	//z-index: 1;
 }
 
 .page-id-header {
 	//width: 100%;
 	padding: 5px 20px;
 	background-color: #E39D44;
-  height:50px;	
+  height:50px;
+  border-radius: 0px;	
+  margin-bottom: 0px;
+  border: none;
 }
 
-.page-id-header p {
-  font-size: 19px;
+.navbar-brand-custom {
+  padding: 0px;
+   height:45px;
+}
+
+.navbar-brand-custom h1, .footer h1 {
+  font-size: 30px;
   font-weight: 700;
   padding: 0px;
-  text-transform: uppercase;
-  line-height: 45px;
+  text-transform: lowercase;
+  line-height: 5px;
+  color: #333;
+}
+
+.navbar-right-custom {
+  padding-top: 5px;
+  margin-right: 161px;
 }
 
 .player-page-name {
@@ -59,8 +85,9 @@ text-align: center;
   padding: 1% 2%;
 }
 
-.player-page-name p {
+.player-page-name h4 {
   font-size: 19px;
+  line-height: 5px;
   color: #777;
   padding: 0px;
   text-transform: uppercase;
@@ -106,6 +133,19 @@ text-align: center;
   text-transform: uppercase;
 }
 
+.page-sub-nav .fa {
+  font-size: 16px;
+  color: #777;
+  padding: 0px 10px;
+  text-transform: uppercase;
+  float: left;
+  line-height: 41px;
+}
+
+.fa {
+  padding: 0px 8px 0px 3px;
+}
+
 .nav > li > a {
 	padding: 3px 15px;
 }
@@ -117,7 +157,7 @@ text-align: center;
 
 
 .player-page-info {
-	margin-top: 25px;
+	margin-top: 20px;
 	//padding-left: 20px;	
 
 }
@@ -127,15 +167,16 @@ text-align: center;
 	top: 0px;	
 }
 
-.player-page-info p {
+.player-page-info h5 {
   font-size: 18px;
   color: #494242;
 }
 
-.player-page-info h5 {
+.player-page-info p {
   font-size: 14px;
   font-weight: 400;
   color: #494242;
+  margin-bottom: 5px;
 }
 
 .player-page-buttons {
@@ -151,8 +192,8 @@ text-align: center;
 }
 
 .stat-logo {
-  margin-top: 20px;
-  color: #A0A5AD;
+  margin-top: 70px;
+  color: #777;
 }
 
 .stat-logo h4 {
@@ -304,8 +345,19 @@ text-align: center;
 	font-size: 20px;
 }
 
+.f-top {
+  background-color: orange;
+  height: 30px;
+  margin-top: 150px;
+}
+
 .footer {
-	background-color: #eee;
-	margin-top: 80px;
-	padding: 5% 15%;
+  background-color: #eee;
+  padding: 5% 4% 10%;
+  border-top:10px solid #777;
+  height: 350px;
+}
+
+.footer-right {
+  margin-top: 50px;
 }
