--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NbaHoopHelixPlayoffsApp</title>
+  <title>Hoop Helix</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	
-
+  <link href='http://fonts.googleapis.com/css?family=Dosis:600|Glegoo:700|Roboto' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
 <!-- Animated preloader -->
@@ -28,13 +28,25 @@
 
 <div class="container">
 <!-- FOOTER -->
+<div class="f-top">
+	
+    
+</div>
 <div class="footer">
-	<h2>HOOP HELIX</h2>
-	<p>Designed and developed by Chicago Public Skills | BlackMambaMyth.com | blackmambamyth@gmail.com</p> 
-<p>Statistics, player photos, and team logos are from NBA.com</p>
+	<div class="col-md-8">
+	  <h1>HOOP HELIX <small>A Team Oriented Take on NBA Basketball</small></h1>
+	  <p>Designed and developed by <a href="http://raquelcps.com" target="_blank">Chicago Public Skills</a></p>
+      <p>Statistics, player photos, and team logos are from <a href="http://nba.com" target="_blank">NBA.com</a></p>
+	</div>
+	<div class="col-md-4 footer-right" >
+	  <p>Visit my other site: <a href="http://blackmambamyth.com" target="_blank">BlackMambaMyth.com</a></p>
+	  <a href="https://twitter.com/BlackMambaMyth" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @BlackMambaMyth</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+	</div>
 </div>
 <!-- END footer -->
 </div>
+
 
 <!-- JS for animated preloader -->
 <script>
