--- a/app/views/shared/_team_header.html.erb
+++ b/app/views/shared/_team_header.html.erb
@@ -1,7 +1,42 @@
 <!-- HEADER and NAV -->	
 <div class="full-header">
-  <div class="page-id-header col-md-8">
-     <p>Hoop Helix</p>
+	<nav class="navbar navbar-default page-id-header">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand navbar-brand-custom" href="/"><h1>hoop helix</h1></a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">           
+	      <ul class="nav navbar-nav navbar-right navbar-right-custom">        
+	        <li class="dropdown">
+	          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-users"></i> Select a team <span class="caret"></span>
+		      </button>
+			    <ul class="dropdown-menu" role="menu" onclick="dosomething();">
+			      <% @teams[0..15].sort_by { |hash| hash.team_city}. each do |hash| %>
+			        <li><a href="/teams/<%= hash.team_id %> " ><%= hash.team_city%> <%= hash.team_name %></a></li>
+			   	  <% end %>  
+		 	    </ul>
+	        </li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+  
+	<div class="player-page-name col-md-12">
+	  <h4>2015 PLAYOFFS</h4> 
+	</div>
+</div>
+
+<!--   <div class="page-id-header col-md-8">
+     <h1>Hoop Helix</h1>
   </div>
   <div class="btn-group col-md-4 team-selector">
 		<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -13,11 +48,4 @@
 	      <li><a href="/teams/<%= hash.team_id %> " ><%= hash.team_city%> <%= hash.team_name %></a></li>
 	   	<% end %>  
 	  </ul>
-  </div>
-  
-  <div class="player-page-name col-md-12">
-    <p>2015 PLAYOFFS</p> 
-  </div>
-
-
-</div>
+  </div> -->
