--- a/app/views/shared/_player_header.html.erb
+++ b/app/views/shared/_player_header.html.erb
@@ -1,3 +1,5 @@
+<!-- Partial for top of /player pages-->
+
 <!-- HEADER and NAV -->	
 <div class="full-header">
 	<nav class="navbar navbar-default page-id-header">
@@ -10,7 +12,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand navbar-brand-custom" href="/teams/1610612739"><h1>hoop helix</h1></a>
+	      <a class="navbar-brand navbar-brand-custom" href="/players/2544"><h1>hoop helix</h1></a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,10 +27,12 @@
 	   				<% end %>  
 		 	    </ul>
 	        </li>
+	        <li><a href="https://twitter.com/BlackMambaMyth"><i class="fa fa-twitter fa-2x twitter-custom"></i></a>
+	        </li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
-	</nav>
+	</nav><!-- END Nav -->
     <div class="player-page-name col-md-12">
       <h4>2015 PLAYOFFS</h4>
     </div>
@@ -75,4 +79,4 @@
 
 	</div> <!--end row player-well-->
     <!-- End Player Info -->
-</div>
+</div><!-- END PLAYER HEADER -->
