--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -70,9 +70,14 @@ body {
   color: #333;
 }
 
+.twitter-custom {
+    margin: 0px 0px 0px 110px;
+    padding: 0px;
+
+}
+
 .navbar-right-custom {
   padding-top: 5px;
-  margin-right: 161px;
 }
 
 .player-page-name {
@@ -118,10 +123,10 @@ body {
   color: #777;
   //background-color: #F9F9F9;
   padding: 3px 0px;
-  height: 45px;
+  height: 100%;
   border-top: 2px solid #777;
   padding: 1% 2%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   //border-bottom: 2px solid #DF8936;
   //border-radius: 0px 0px 5px 5px;
 }
@@ -191,8 +196,12 @@ body {
 	color: #E39D44;	
 }
 
+.stat-main {
+  margin-top: 10px;
+}
+
 .stat-logo {
-  margin-top: 70px;
+  margin-top: 80px;
   color: #777;
 }
 
@@ -206,6 +215,14 @@ body {
   //color: #A6ADB1;
   color: #337AB7;
   text-align: right;
+}
+
+.stat-name-green p {
+  margin-top: 13px;
+color: rgb(130, 192, 130);
+font-style: oblique;
+font-size: 14px;
+text-transform: lowercase;
 }
 
 .stat-name-purple {
@@ -303,8 +320,16 @@ body {
 	color: red;
 }
 
+.player-data p, .player-data-purple p, .player-data-green p, .player-data-lt-blue p, .player-data-orange p, .player-data-dk-orange p {
+   text-transform: uppercase; 
+}
+
 .team-data {
   color: #A0A5AD;
+}
+
+.team-data p {
+  text-transform: uppercase;
 }
 
 .progress {
@@ -348,16 +373,26 @@ body {
 .f-top {
   background-color: orange;
   height: 30px;
-  margin-top: 150px;
+  margin-top: 170px;
 }
 
 .footer {
   background-color: #eee;
-  padding: 5% 4% 10%;
+  padding: 4% 4% 27%;
   border-top:10px solid #777;
-  height: 350px;
+  
+}
+
+.footer p {
+  color: #565454;
+}
+
+.footer-copy p {
+  font-size: 12px; 
+  margin-top: 30px;
 }
 
 .footer-right {
-  margin-top: 50px;
+  margin-top: 15px;
 }
+
