--- a/app/views/shared/_team_header.html.erb
+++ b/app/views/shared/_team_header.html.erb
@@ -1,3 +1,5 @@
+<!-- Partial for top of /team pages-->
+
 <!-- HEADER and NAV -->	
 <div class="full-header">
 	<nav class="navbar navbar-default page-id-header">
@@ -10,7 +12,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand navbar-brand-custom" href="/"><h1>hoop helix</h1></a>
+	      <a class="navbar-brand navbar-brand-custom" href="/players/2544"><h1>hoop helix</h1></a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,27 +27,13 @@
 			   	  <% end %>  
 		 	    </ul>
 	        </li>
+	        <li><a href="https://twitter.com/BlackMambaMyth"><i class="fa fa-twitter fa-2x twitter-custom"></i></a>
+	        </li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
-	</nav>
-  
+	</nav><!-- END Nav --> 
 	<div class="player-page-name col-md-12">
 	  <h4>2015 PLAYOFFS</h4> 
 	</div>
-</div>
-
-<!--   <div class="page-id-header col-md-8">
-     <h1>Hoop Helix</h1>
-  </div>
-  <div class="btn-group col-md-4 team-selector">
-		<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-	    Select a team <span class="caret"></span>
-	  </button>
-	    	
-	  <ul class="dropdown-menu" role="menu" onclick="dosomething();">
-	    <% @teams[0..15].sort_by { |hash| hash.team_city}. each do |hash| %>
-	      <li><a href="/teams/<%= hash.team_id %> " ><%= hash.team_city%> <%= hash.team_name %></a></li>
-	   	<% end %>  
-	  </ul>
-  </div> -->
+</div><!-- END HEADER -->
