--- a/app/views/shared/_team_header.html.erb
+++ b/app/views/shared/_team_header.html.erb
@@ -12,7 +12,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand navbar-brand-custom" href="/players/2544"><h1>hoop helix</h1></a>
+	      <a class="navbar-brand navbar-brand-custom" href="/" onclick="dosomething();"><h1>hoop helix</h1></a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,12 +22,14 @@
 	          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-users"></i> Select a team <span class="caret"></span>
 		      </button>
 			    <ul class="dropdown-menu" role="menu" onclick="dosomething();">
+			    	<li><p style="padding: 3px 20px; font-size: 12px; color: #777">Only 2015 playoff teams are listed</p></li>
+			    	<li class="divider"></li>
 			      <% @teams[0..15].sort_by { |hash| hash.team_city}. each do |hash| %>
 			        <li><a href="/teams/<%= hash.team_id %> " ><%= hash.team_city%> <%= hash.team_name %></a></li>
 			   	  <% end %>  
 		 	    </ul>
 	        </li>
-	        <li><a href="https://twitter.com/BlackMambaMyth"><i class="fa fa-twitter fa-2x twitter-custom"></i></a>
+	        <li><a href="https://twitter.com/BlackMambaMyth" target="_blank"><i class="fa fa-twitter fa-2x twitter-custom"></i></a>
 	        </li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
