#14 Added preloader and team names to team links on team index page

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -60,8 +60,8 @@
    	  <% if team.team_id == 1610612764 %>
 		  <img src="http://stats.nba.com/media/img/teams/logos/was_logo.svg">
    	  <% end %>
+   	<p><%= team.team_city %> <%= team.team_name %></p>
    	</a>
-   	<!-- <p><%= team.team_id %></p> -->
    	</div>
   <% end %>
 </div>
