Added eastern and western conference finals games and touches to conffinals show page

--- a/app/views/finals/_touchespartial.html.erb
+++ b/app/views/finals/_touchespartial.html.erb
@@ -22,7 +22,7 @@
 	  </div><!-- END TOUCHES -->
 
 <% else %>
-<p> Still working on parsing touches data for Round 1, Semis, and Conference Finals </p>
+<p> Still working on parsing touches data for Round 1 and Semifinals </p>
 <% end %> 
 
 
