--- a/app/views/conffinals/show.html.erb
+++ b/app/views/conffinals/show.html.erb
@@ -59,7 +59,36 @@
 	        <h3>Touches</h3>
     	</div>
 	  	<div class="col-md-6 overview-bars">
-<%= render 'finals/touchespartial' %> 
+	  	<% if @po_playerdata[0]["TEAM_ABBREVIATION"] == "CLE" || @po_playerdata[0]["TEAM_ABBREVIATION"] == "ATL" %>
+	  		<div class="progress">
+	          <div class="progress-bar" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: <%= @ec_player_touches_array.inject(:+).to_f / @ec_team_touches_array.inject(:+).to_f * 100 %>%;">      
+                    <%= (@ec_player_touches_array.inject(:+).to_f / @ec_team_touches_array.inject(:+).to_f * 100).to_i %>%
+              </div>
+          </div>
+          <div class="row">
+		    <div class="col-xs-6 player-data">
+		      <p><%= @ec_player_touches_array.inject(:+) %> Touches</p>
+		    </div>
+		    <div class="col-xs-6 team-data" style="text-align:right">
+		      <p><%= @ec_team_touches_array.inject(:+) %> Touches</p>
+		    </div>
+		  </div>
+		<% end %>
+		<% if @po_playerdata[0]["TEAM_ABBREVIATION"] == "GSW" || @po_playerdata[0]["TEAM_ABBREVIATION"] == "HOU" %>
+	  		<div class="progress">
+	          <div class="progress-bar" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: <%= @wc_player_touches_array.inject(:+).to_f / @wc_team_touches_array.inject(:+).to_f * 100 %>%;">      
+                    <%= (@wc_player_touches_array.inject(:+).to_f / @wc_team_touches_array.inject(:+).to_f * 100).to_i %>%
+              </div>
+          </div>
+          <div class="row">
+		    <div class="col-xs-6 player-data">
+		      <p><%= @wc_player_touches_array.inject(:+) %> Touches</p>
+		    </div>
+		    <div class="col-xs-6 team-data" style="text-align:right">
+		      <p><%= @wc_team_touches_array.inject(:+) %> Touches</p>
+		    </div>
+		  </div>
+		<% end %>
           
 	    </div><!-- END overview-bars -->   	
 	  </div><!-- END TOUCHES -->
