--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -6,7 +6,7 @@
 </div>	
 <div class="col-md-12 alert alert-info alert-dismissible alert-custom" role="alert">
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	Welcome to Hoop Helix. The focus right now is on the 2015 playoffs, but I have more features and improvements planned during the off-season. Thanks for visiting. 
+	Welcome to Hoop Helix. The focus right now is on the 2015 NBA Playoffs, but I have more features and improvements planned for the off-season. Thanks for visiting. 
 </div>
 <div class="col-md-12 team-list">	
 <% @teams[0..15].each do |team| %>
