--- a/app/views/shared/_player_header.html.erb
+++ b/app/views/shared/_player_header.html.erb
@@ -29,7 +29,7 @@
 	   				<% end %>  
 		 	    </ul>
 	        </li>
-	        <li><a href="https://twitter.com/BlackMambaMyth"><i class="fa fa-twitter fa-2x twitter-custom"></i></a>
+	        <li><a href="https://twitter.com/BlackMambaMyth" target="_blank"><i class="fa fa-twitter fa-2x twitter-custom"></i></a>
 	        </li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
